name:                pg-atto
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Atto
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , attoparsec >= 0.13 && < 0.14
                     , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
