name:                pg-atto
version:             0.1.0.0
license:             BSD3
author:              Colin Woodbury
maintainer:          colingw@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Atto

  build-depends:       base >= 4.9 && < 4.10
                     , attoparsec >= 0.13 && < 0.14
                     , bytestring
                     , streaming >= 0.1 && < 0.2
                     , streaming-bytestring >= 0.1 && < 0.2
                     , streaming-utils >= 0.1 && < 0.2

  default-language:    Haskell2010

  ghc-options: -fwarn-unused-imports -fwarn-unused-binds
